<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cart_bg">

    <TextView
        android:id="@+id/payment_title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/checkout"
        android:textSize="40sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/payment_subtext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_title"
        android:layout_centerHorizontal="true"
        android:text="@string/please_select_a_payment_method_below"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_payment_form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payment_subtext">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6E5E3">

            <TextView
                android:id="@+id/text_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/total_price_500"
                android:textAlignment="center"
                android:textColor="#616161" />

            <Spinner
                android:id="@+id/orderform_paymentmethod"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@id/text_subtotal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:popupElevation="15dp"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/proof_of_payment"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/orderform_paymentmethod"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/proof_of_payment"
                android:src="@drawable/baseline_image_search_24" />

            <Button
                android:id="@+id/orderFormSubmit_btn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_below="@id/proof_of_payment"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#F9D341"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#000000"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orderform_paymentmethod" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>