<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">


    <!-- Constraints -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vector_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vector_division2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftover_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="-0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightover_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.04" />
    <!-- Vector 10 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vector_10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"

        android:background="@drawable/sign_up_1_activity_vector_9"
        app:layout_constraintBottom_toBottomOf="@+id/vector_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"

        android:src="@drawable/log_in_activity_logo_transparent_4"
        app:layout_constraintBottom_toBottomOf="@id/vector_division2"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:fontFamily="@font/relay_poppins_regular"
        android:text="@string/log_in_or_create_an_account_to_continue"
        android:textColor="@color/black"

        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />
            <!-- emailadd-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/text_input_box_stroke"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"

                app:hintTextColor="#5F323F"

                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline2"
                app:layout_constraintRight_toRightOf="@+id/right_guideline2"

                app:boxCornerRadiusBottomEnd="13dp"
                app:boxCornerRadiusBottomStart="13dp"
                app:boxCornerRadiusTopEnd="13dp"
                app:boxCornerRadiusTopStart="13dp"

                app:startIconDrawable="@drawable/iconemail"
                app:layout_constraintTop_toTopOf="parent"
                android:textColorHint="#45474B"

                android:fontFamily="@font/relay_poppins_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"

                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_enter_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/text_input_box_stroke"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"

                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline2"
                app:layout_constraintRight_toRightOf="@+id/right_guideline2"

                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"

                app:layout_constraintTop_toBottomOf="@+id/layout_email_address"

                android:textColorHint="#45474B"
                app:hintTextColor="#5F323F"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/iconkey"

                android:fontFamily="@font/relay_poppins_regular">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/password"
                    android:maxLines="1"
                    android:maxLength="15"

                    android:id="@+id/enter_password"
                    android:inputType="textPassword"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backToPrevious" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/log_in_button"
                android:layout_width="234dp"
                android:layout_height="55dp"
                android:backgroundTint="#5F323F"
                android:text="@string/log_in"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"

                app:layout_constraintLeft_toLeftOf="@+id/left_guideline2"
                app:layout_constraintRight_toRightOf="@+id/right_guideline2"
                app:layout_constraintTop_toBottomOf="@+id/layout_enter_password"
                app:layout_constraintBottom_toTopOf="@+id/line1"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                />

            <View
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/black"

                app:layout_constraintLeft_toLeftOf="@+id/left_guideline2"
                app:layout_constraintRight_toRightOf="@+id/right_guideline2"
                app:layout_constraintTop_toBottomOf="@+id/log_in_button"
                app:layout_constraintBottom_toTopOf="@+id/sign_up_redirect_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/relay_poppins_regular"
                android:text="or"

                android:textColor="@color/black"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                app:layout_constraintLeft_toLeftOf="@+id/left_guideline2"
                app:layout_constraintRight_toRightOf="@+id/right_guideline2"
                app:layout_constraintTop_toBottomOf="@+id/log_in_button"
                app:layout_constraintBottom_toTopOf="@+id/sign_up_redirect_button"/>

            <Button
                android:id="@+id/sign_up_redirect_button"
                android:layout_width="234dp"
                android:layout_height="55dp"
                android:backgroundTint="#EFEFEF"
                android:text="@string/signuphere"
                android:textColor="@color/black"
                app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"

                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintLeft_toLeftOf="@+id/left_guideline2"
                app:layout_constraintRight_toRightOf="@+id/right_guideline2"
                app:layout_constraintTop_toBottomOf="@+id/line1"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
